# Purr-fect-Scrapper

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  scraper.service
.github/workflows/: ci.yml
backend/: audit_log.py  captcha_handler.py  celery_app.py  celery_tasks.py  config.py  crawl_checkpoint.py  db_pool.py  dependencies.py  domain_profile.py  errors.py  history_store.py  job_queue.py  job_store.py  main.py  merger.py  normalizer.py  orchestrator.py  parser.py  pytest.ini  quality.py  rate_limiter.py  report.py  requirements.txt  resource_monitor.py  response.json  run_tests.sh  scraper.py  stealth_config.py  telemetry.py  temp_email.py  test_cancel.sh  utils.py
backend/engines/: __init__.py  engine_ai_assist.py  engine_crawl_discovery.py  engine_dom_interaction.py  engine_endpoint_probe.py  engine_file_data.py  engine_headless_playwright.py  engine_hybrid.py  engine_network_observe.py  engine_retry.py  engine_search_index.py  engine_secret_scan.py  engine_session_auth.py  engine_static_httpx.py  engine_static_requests.py  engine_static_urllib.py  engine_structured_metadata.py  engine_visual_ocr.py
backend/pipeline/: analyzer.py  executor.py  selector.py
backend/routes/: __init__.py  jobs.py  reports.py  scrape.py  system.py
backend/tests/: conftest.py  test_antiblock.py  test_api.py  test_bugfixes.py  test_crawl_checkpoint.py  test_db_pool.py  test_domain_profile.py  test_endpoint_probe.py  test_errors.py  test_harsh.py  test_live.py  (+12 more)
frontend/: index.html  script.js  style.css
