[project]
name = "universal-scraper"
version = "1.0.0"
description = "Universal multi-engine web scraping system"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter
